oblig2patch/src/tests/oblig2/errors/general5_fail.cmp
program general5_fail
begin
	proc Proc( a : ref ( int ) )
	begin
        in
	    deref(a) := 42
	end;

	proc main()
	begin
	    var tmp : int
        in 
	    tmp := 32;
	    Proc( tmp ); /* error, ref type not used */
	    printint( tmp )
	end
end